# dual-readout

./: .gitignore  README.md  runel.co  rungun.sh  setenv-cc7-gcc8.sh
DRsim/: run_ele_en.mac
Detector/DRsegmentation/include/: GridDRcalo.h
Detector/DRsegmentation/src/: GridDRcalo.cpp
Reco/: Reco.cc  calib.csv
Reco/include/: RecoFiber.h
Reco/src/: RecoFiber.cc
TMVA_script/: TMVAClassification.C  draw_input_variables.c
analysis/: CMakeLists.txt  produce_rootfiles_for_CNN_4pi_images_224x224.cc  produce_rootfiles_for_CNN_clusters_images_280x280.cc  produce_rootfiles_for_TMVA.cc
pipipi_example/: pipipi_generic.cmnd  run_hepmc_pipipi.mac
rootIO/include/: fastjetInterface.h
rootIO/src/: fastjetInterface.cc
